<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margem_16"
    tools:context=".home.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/altura_125"
        android:layout_height="@dimen/largura_125"
        android:layout_marginStart="@dimen/margem_32"
        android:layout_marginLeft="@dimen/margem_32"
        android:layout_marginTop="@dimen/margem_140"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/carrinho"/>

    <TextView
        android:id="@+id/tvDescricaoApp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_189"
        android:layout_marginLeft="@dimen/margem_189"
        android:layout_marginRight="@dimen/margem_189"
        android:layout_marginTop="112dp"
        android:text="@string/descricao_app"
        android:textColor="@color/black"
        android:textSize="@dimen/fonte_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/etNomeProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margem_24"
        android:textSize="@dimen/fonte_12"
        android:hint="@string/nomeProduto"
        app:layout_constraintBottom_toTopOf="@+id/etQuantidadeProduto"
        app:layout_constraintEnd_toEndOf="@+id/tvDescricaoApp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/etQuantidadeProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margem_24"
        android:textSize="@dimen/fonte_12"
        android:hint="@string/quantidadeProduto"
        app:layout_constraintBottom_toTopOf="@+id/etValorProduto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etNomeProduto"/>

    <EditText
        android:id="@+id/etValorProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margem_76"
        android:textSize="@dimen/fonte_12"
        android:hint="@string/valorUnitarioProduto"
        app:layout_constraintBottom_toTopOf="@+id/buttonCalcular"
        app:layout_constraintEnd_toEndOf="@+id/etQuantidadeProduto"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etQuantidadeProduto"/>

    <Button
        android:id="@+id/buttonCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:textSize="@dimen/fonte_12"
        android:text="@string/botao_calcular"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textAlignment="center"
        android:backgroundTint="#F2451E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
